added social icons

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
+            <ul class="navbar-nav text-left">
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
@@ -87,7 +87,7 @@
       </div>
     </div>
 
-    <div id="contacts" class="contact container-fluid text-center mt-5 bg-dark text-white py-3">
+    <div id="contact" class="contact container-fluid text-center mt-5 bg-dark text-white py-3">
 
       <div class="container">
         <h2 class="text-center mt-3">Contact Information</h2>
