added social icons

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 </div>
 
       </div>
-      <p>Copyright &copy;2022 Z Meller</p>
+      <p>Copyright &copy;2022 Meller</p>
     </footer>
     
 
