fixed button changed hero title

--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
 
     <div class="hero-section text-white d-flex flex-column justify-content-center align-items-center">
       <br><br><br><br>
-      <h1 class="">Great Black Swamp Brewing Co.</h1>
+      <h1 class="">Great Black Swamp Brewery</h1>
       <p class="text-center m-5">Great Black Swamp Brewing Company opened in 2009 by 2 homebrewers with a dream of a brewery to share great locally brewed beer with Northwest Ohio. The tasting room was opened in 2015 to promote this goal.</p>
-      <br>
-      <a href="https://goo.gl/maps/Q7CMhaGUXx2oBH2L9" class="btn btn-danger w-25 btn-md">Come Visit</a>
+      
+      <a href="https://goo.gl/maps/Q7CMhaGUXx2oBH2L9" class="btn btn-danger w-15 btn-md">Come Visit</a>
     </div>
 
     <div id="products" class="products text-center mt-5 container">
