--- a/index.html
+++ b/index.html
@@ -214,7 +214,6 @@
     <div id="contact" class="contact container-fluid text-center mt-5 bg-dark text-white py-3">
 
       <div class="container">
-        <h2 class="text-center mt-3">Contact Information</h2>
 
         <div class="d-flex flex-column flex-lg-row row ">
 
@@ -262,11 +261,12 @@
       <img src="img/Untitled design (2).png" alt="gbslogo" id="btmlogo">
       <br>
       <div class="socials mb-3">
-        <i class="fa fa-facebook-official fa-2xl"  href="https://facebook.com"></i>
-       
-        <i class="fa fa-twitter fa-2xl" href="https://twitter.com"></i>
-        <i class="fa fa-linkedin fa-2xl" href="https://linkedin.com"></i>
-        <i class="fa fa-github fa-2xl" href="https://github.com/zmeller"></i>
+
+        <a href="https://www.facebook.com/gbsbrewingco/?ref=settings" class="fa fa-facebook-official fa-2x"></a>
+        <a href="https://www.instagram.com/gbsbrewing_co_toledo/?hl=en" class="fa fa-instagram fa-2x"></a>
+        <a href="https://www.linkedin.com/company/great-black-swamp-brewing/" class="fa fa-linkedin fa-2x"></a>
+        <a href="https://github.com/zmeller" class="fa fa-github fa-2x"></a>
+        
 </div>
 
       </div>
