added site link

--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
         <a href="https://www.facebook.com/gbsbrewingco/?ref=settings" class="fa fa-facebook-official fa-2x"></a>
         <a href="https://www.instagram.com/gbsbrewing_co_toledo/?hl=en" class="fa fa-instagram fa-2x"></a>
         <a href="https://www.linkedin.com/company/great-black-swamp-brewing/" class="fa fa-linkedin fa-2x"></a>
-        <a href="https://github.com/zmeller" class="fa fa-github fa-2x"></a>
+        <a href="https://zmeller.github.io/final-project/" class="fa fa-github fa-2x"></a>
         
 </div>
 
